# py-executable-checklist

./: .cruft.json  .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: build.yml  dependencies.yml  draft_release.yml  test_release.yml
api_docs/: index.html
changelog/: index.html
docs/: api_docs.md
search/: search_index.json
src/py_executable_checklist/: workflow.py
src/py_workflow/: workflow.py
tests/: test_workflow.py  workflow_test.py
